--- a/css/style.css
+++ b/css/style.css
@@ -520,6 +520,37 @@ footer .container {
   fill: white;
 }
 
+/* --- CALL FLOATING BUTTON --- */
+.call-float {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 110px;
+  /* Stacked above WhatsApp */
+  right: 40px;
+  background-color: #007bff;
+  color: #FFF;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 30px;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s;
+}
+
+.call-float:hover {
+  background-color: #0056b3;
+}
+
+.call-icon {
+  width: 25px;
+  height: 25px;
+  fill: white;
+}
+
 /* Lightbox Styles */
 .lightbox {
   display: none;
